corrected the spacing issue in playlist cover by using padding.

--- a/styles/main-bar.css
+++ b/styles/main-bar.css
@@ -3,6 +3,7 @@
     flex: 1;
     background-color: blue;
     border-radius: 10px;
+    
 }
 
     .main-bar-contents{
@@ -14,9 +15,9 @@
         min-width: 335px;
         min-height: 230px;
         overflow: auto;
-        align-items: center;
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
         .main-bar-playlist-cover{
@@ -24,11 +25,12 @@
             flex: 1;
             width: 100%;
             background-color: rgb(113, 5, 5);
-            max-height: 285px;
+            max-height: 300px;
             height: 100%;
             align-items: center;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
+            padding: 20px;
         }
 
             .main-bar-palylist-cover-temp-padding{
@@ -104,12 +106,15 @@
 
                                 .saves-and-time-of-total-playlist-TXT{}
 
-        .play-pause-things{}
+        .play-pause-things{
+
+        }
 
             .play-pause-actual-elements{
                 margin: 20px;
                 display: flex;
                 justify-content: space-between;
+
             }
 
                 .main-bar-seperating-elemets{
@@ -228,6 +233,10 @@
                     border-bottom-width: 2px;
                     border-color: black;
                     border-style: solid;
+                    position: sticky;
+                    top: 0px;
+                    background-color: red;
+
                 }
 
                 .the-headers-of-playlist-sticky p{
@@ -437,7 +446,7 @@
     .main-bar-palylist-cover-temp-padding{
         display: flex;
         justify-content: center;
-        height: 100%;
+
     }
 
 }
